# fcv

./: Cargo.toml
examples/: shapes.rs  simple.rs
src/: buffers.rs  camera.rs  context.rs  lib.rs  renders.rs  shapes.rs  texture.rs  ui.rs  window.rs
src/buffers/: transform_buffer.rs  vertex_buffer.rs  vertex_impl.rs
src/camera/: camera_buffer.rs  camera_controller.rs  detail.rs
src/context/: manages.rs
src/renders/: shape_manager.rs  shape_renderer.rs  sparse_vertex_renders.rs  vertex_manager.rs  vertex_renders.rs
src/shaders/: points.wgsl
src/shapes/: shape_base.rs
src/window/: handler.rs
