[package]
name = "fcv"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.19", features = ["derive"]}
env_logger = "0.11"
glam = {version = "0.29", features = ["bytemuck"]}
log = "0.4"
pollster = "0.4"
winit = "0.30"
egui-wgpu = { version = "0.29",features = ["winit"] }
egui-winit = "0.29"
egui = "0.29"